--- a/_quarto.yml
+++ b/_quarto.yml
@@ -29,6 +29,12 @@ book:
     - primeros-pasos.qmd
     - git-basico.qmd
     - netlify-preparar.qmd
+    - preparar-datos.qmd
+    - analisis-estadistico.qmd
+    - graficos.qmd
+    - datos-geoespaciales.qmd
+    - analisis-geoespacial.qmd
+    - mapas.qmd
     - resumen.qmd
     - referencias.qmd
     
