reuso de textos incluidos en la carpeta _reusables

--- a/_quarto-posgrado.yml
+++ b/_quarto-posgrado.yml
@@ -1,10 +1,17 @@
-project: 
-  output-dir: _book/posgrado
-
 book:
   subtitle: "— posgrado —"
   chapters:
     - index.qmd
+    - primeros-pasos.qmd
+    - git-basico.qmd
+    - netlify-preparar.qmd
+    - preparar-datos.qmd
+    - analisis-estadistico.qmd
+    - graficos.qmd
+    - datos-geoespaciales.qmd
+    - analisis-geoespacial.qmd
+    - mapas.qmd
+    - resumen.qmd
+    - referencias.qmd
+  appendices: 
     - requerimientos-posgrado.qmd
-
-
